// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter team off 1`] = `
Object {
  "selectingNewActionTeam": false,
  "teamFilterId": null,
  "teamFilterName": "All teams",
}
`;

exports[`filter team off bad input 1`] = `
Object {
  "selectingNewActionTeam": false,
  "teamFilterId": null,
  "teamFilterName": "All teams",
}
`;

exports[`filter team on 1`] = `
Object {
  "selectingNewActionTeam": false,
  "teamFilterId": "123",
  "teamFilterName": "Team A",
}
`;

exports[`initial state 1`] = `
Object {
  "selectingNewActionTeam": false,
  "teamFilterId": null,
  "teamFilterName": "All teams",
}
`;

exports[`selectNewActionTeam off 1`] = `
Object {
  "selectingNewActionTeam": false,
  "teamFilterId": null,
  "teamFilterName": "All teams",
}
`;

exports[`selectNewActionTeam on 1`] = `
Object {
  "selectingNewActionTeam": true,
  "teamFilterId": null,
  "teamFilterName": "All teams",
}
`;
